# ver-shim-rs

./: Cargo.toml  README.md  tests.sh
.github/workflows/: ci.yml
ver-shim/: Cargo.toml
ver-shim-build/: Cargo.toml  README.md
ver-shim-build/src/: cargo_helpers.rs  find_objcopy.rs  lib.rs  llvm_tools.rs  update_section.rs
ver-shim-example/: Cargo.toml
ver-shim-example-build/: Cargo.toml  build.rs
ver-shim-example-build/src/: lib.rs
ver-shim-example-objcopy/: Cargo.toml  build.rs
ver-shim-example/src/: main.rs
ver-shim-tool/: Cargo.toml  README.md
ver-shim-tool/src/: main.rs
ver-shim/src/: lib.rs
