[package]
name = "ver-shim-build"
version = "0.1.1"
description = "Build script helper for injecting version data into binaries"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[[bin]]
name = "ver-shim-gen"
required-features = ["cli"]

[features]
default = []
cli = ["dep:conf"]

[dependencies]
ver-shim = { path = "../ver-shim", version = "0.1.1" }
heck = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
conf = { version = "0.4", optional = true, default-features = false }
