[package]
name = "ver-shim-build"
version = "0.2.1"
description = "Deprecated: renamed to ver-stub-build"
readme = "README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
ver-shim = { path = "../ver-shim", version = "0.2.0" }
heck = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
