[package]
name = "ver-shim"
version = "0.2.1"
description = "Deprecated: renamed to ver-stub"
readme = "README.md"
links = ".ver_shim_data"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[lib]
